# QKP-Reorder

./: .gitignore  LICENSE  MANIFEST.md  NOTICE.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  requirements-reproduction.txt  requirements.txt
data/: README.md
docs/: README.md
examples/: run_qkp_reorder.py
figures/: README.md
qkp_reorder/: __init__.py  analyze_cost_effectiveness.py  baselines.py  build_final_summary.py  build_final_tables.py  compressors.py  convert_innovation_longbench_predictions_for_official_eval.py  convert_longbench_predictions_for_official_eval.py  data_loader_multidoc.py  demo_streamlit_app.py  evaluate.py  evaluate_nq_style_metrics.py  inspect_stage4_data.py  llm_inference.py  ours_utils.py  plot_cost_effectiveness.py  plot_innovation_stage4_nq_100.py  plot_innovation_stage5_position.py  plot_innovation_stage6_longbench_small.py  plot_innovation_stage7_ablation.py  plot_innovation_stage7_budget_sensitivity.py  plot_longbench_debug.py  plot_longbench_small.py  plot_nq_style_metrics.py  plot_position_results.py  plot_stage6_results.py  prepare_longbench_debug_3x10.py  prepare_longbench_small_3x50.py  prepare_nq_100.py  prepare_nq_multidoc_debug.py  prepare_nq_small_20.py  prepare_position_5x20.py  probe_longbench_fields.py  prompt_builder.py  run_00_test_longllmlingua.py  run_01_test_compressors.py  run_02_debug_qa.py  run_03_multidoc_debug.py  run_04_nq_debug.py  run_05_nq_small.py  (+27 more)
results/: README.md
results/final/: cost_effectiveness_by_experiment.csv  cost_effectiveness_notes.md  cost_effectiveness_overall.csv  (+17 more)
(+26 files in other folders)
